add ability to add categories to a post

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -385,6 +385,10 @@ ul {
     list-style: disc;
 }
 
+table ul {
+    margin-bottom: 0;
+}
+
 li {
     display: list-item;
 }
@@ -752,6 +756,18 @@ select {
 .ss-custom-select {
     position: relative;
     padding: 0;
+}
+
+.ss-custom-select-multiple select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    text-indent: 0.01px;
+    text-overflow: '';
+    margin: 0;
+    line-height: 3rem;
+    vertical-align: middle;
+    height: 100%;
 }
 
 .ss-custom-select select {
